--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root{ /*declaração de variáveis; PASSANDO O MOUSE EM CIMA DAS CORES VOCÊ CONSEGUE MUDÁ-LAS*/
     --cor-de-fundo: #0c97e717; 
     --verde: #ff091d00; 
-    --branco: #faf6040a; 
-    --botao-ativo: #d6d3f800; 
+    --branco: black; 
+    --botao-ativo: #1e0beef8; 
     --botao-inativo: rgba(236, 164, 179, 0); 
     --texto-fundo: rgba(58, 55, 94, 0); 
 }
